seaqt/QtMultimedia/gen_qmediacontainercontrol.h

class QMediaContainerControl;
class QMetaMethod;
class QMetaObject;
class QObject;
typedef struct QMediaContainerControl QMediaContainerControl;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
QMetaObject* QMediaContainerControl_metaObject(const QMediaContainerControl* self);
void* QMediaContainerControl_metacast(QMediaContainerControl* self, const char* param1);
int QMediaContainerControl_metacall(QMediaContainerControl* self, int param1, int param2, void** param3);
struct miqt_string QMediaContainerControl_tr(const char* s);
struct miqt_string QMediaContainerControl_trUtf8(const char* s);
struct miqt_array /* of struct miqt_string */  QMediaContainerControl_supportedContainers(const QMediaContainerControl* self);
struct miqt_string QMediaContainerControl_containerFormat(const QMediaContainerControl* self);
void QMediaContainerControl_setContainerFormat(QMediaContainerControl* self, struct miqt_string format);
struct miqt_string QMediaContainerControl_containerDescription(const QMediaContainerControl* self, struct miqt_string formatMimeType);
struct miqt_string QMediaContainerControl_tr2(const char* s, const char* c);
struct miqt_string QMediaContainerControl_tr3(const char* s, const char* c, int n);
struct miqt_string QMediaContainerControl_trUtf82(const char* s, const char* c);
struct miqt_string QMediaContainerControl_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QMediaContainerControl_staticMetaObject();